--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: .5px;
   /* margin-top: 0; */
-  /* text-transform: uppercase; */
+  /*  */
 }
 
 .blue {
@@ -29,12 +29,25 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   text-decoration: none;
-  font-weight: bold;;
+  font-weight: bold;
 }
 
-nav a {
-  
-  /* color: #ffffff;    */
+.menu-link {
+  padding: 0 10px;
+}
+
+.menu {
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* text-transform: uppercase;  */
+}
+
+
+
+ul li {
+  display: inline;
 }
 
 a:visited {
