--- a/style.css
+++ b/style.css
@@ -1,7 +1,51 @@
+:root {
+  --accent: #83a8ad;
+}
+
+
+meter::-webkit-meter-bar {
+  border-radius: 20px;
+  background: white;
+  border: none;
+}
+meter::-webkit-meter-optimum-value {
+  background: var(--accent);
+}
+}
+
+meter::-moz-meter-bar {
+  -moz-appearance: meterchunk;
+  border-radius: 20px;
+  border: none;
+
+}
+
+meter:-moz-meter-optimum  {
+  border-radius: 20px;
+  background: #ffffff;
+}
+
+
+meter:-moz-meter-optimum::-moz-meter-bar  {
+  border-radius: 20px;
+  background: var(--accent);
+}
+
+
+
+img {
+  border-radius: 10px;;
+}
+
 body {
   font-family: 'Quicksand', sans-serif;
   font-size: 24px;
   margin: 0;
+}
+
+*::selection {
+  background-color: grey;
+  color:white;
 }
 
 ul {
@@ -18,11 +62,12 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin: 0;
+  /* text-indent: 50px; */
 }
 
 .summary {
   box-sizing: border-box;
-  border-top: 1px grey solid;
+  border-top: 1px #cecece solid;
   margin-top: 5px;
 }
 
@@ -37,10 +82,27 @@ p {
   padding: 40px 0;
 }
 
+section#about .container > p::first-letter {
+  font-weight: bold;
+}
+
 a {
   text-decoration: none;
   font-weight: bold;
+  padding: 5px;
 }
+
+a:visited {
+  color: grey;
+
+}
+
+
+a:hover, a:visited:hover {
+  color: white;
+  background-color: grey;
+}
+
 
 /* .menu-link {
 padding: 0 10px;
@@ -60,10 +122,6 @@ ul li {
   display: inline;
 }
 
-a:visited {
-  color: grey;
-
-}
 
 #info {
   display: flex;
@@ -77,7 +135,7 @@ footer a:visited {
 
 
 footer {
-  background: #84aaaa;
+  background: var(--accent);
   margin: 0px;
 }
 
@@ -112,10 +170,12 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  border-left: 1px #cecece solid ;
+  padding-left: 10px;
 }
 
 .date {
-  color: blue;
+  color:var(--accent);
   margin-right: 10px;
   font-weight: bold;
 }
